# robosub-2021

./: .gitignore  Dockerfile  README.md  intelligence.py  requirements.txt  runfile.sh  setup.sh
Dockerfiles/Telemetry/: Dockerfile
Joystick_work/: Joystick_flow_text.txt  Maestro_Mapping.py
dockerfiles/Client_Docker/: Dockerfile  build_client.sh  runclient.sh
dockerfiles/Logging/: Dockerfile  requirements.txt
dockerfiles/Pilot/: Dockerfile
dockerfiles/Pilot_Complete/: Dockerfile  maestro_device.txt
dockerfiles/Pilot_Testing/: requirements.txt
dockerfiles/Server_Docker/: Dockerfile  build_server.sh  runserver.sh
dockerfiles/Telemetry/: Dockerfile  requirements.txt
dockerfiles/Video/: Dockerfile
docs/: man_env_setup.md  man_gui_operation.md  man_host_setup.md  port_configuration.md  ref_env_setup.md  ref_gui_architecture.md  ref_intelligence.md  ref_port_config.md  setup.md
gui/: cmd_grpc_client.py  logging_client.py  logging_demo.py  main.py  pilot_server.py  telemetry_client.py  video_server.py
inference/: inference.py
jimmy_proto/: Dockerfile  client.py  demo.py  driver.py  new.py  server.py  start_server.py
jimmy_proto/protobufs/: buffer.proto  buffer_pb2.py  client.py  gate_detector.py
src/: bounding_box.py  demo.py  video_stream.py
src/Control/: CMakeLists.txt  PIDController6DOF.cc  PIDController6DOF.hh  PIDController6DOF.i  PicoPIDController.hh  autonomous_pilot_server.py  maestro_driver.py  motherboard_driver.py  pico_pid_controller.py  pid_controller.ipynb  pid_controller.py  pid_params_1.json  pilot_client.py  pilot_server.py  state_estimator.py  telemetry_server.py
src/Control/cpp_control_system/: PIDController6DOF.cc  PIDController6DOF.hh
src/Inference/: gate_detector.py  inference.py  object_detector.py  optical_flow.py
src/Intelligence/: .client.py.kate-swp  .server.py.kate-swp  all_systems_demo.py  buffer.proto  buffer_pb2.py  buffer_pb2_grpc.py  client.py  cmd_grpc_server.py  config.pickle  gate_detector.py  logging_server.py  new_state_machine.py  passer.py  pico_mission_builder.py  runfile.sh  server.py  start_client.py  test.py
src/base/: README.md
src/files/: crop_video.py  (+3 more)
(+88 files in other folders)
